added comments to reseval_example.ini

--- a/reseval_example.ini
+++ b/reseval_example.ini
@@ -1,28 +1,41 @@
-;[redcap_api]
+
+;Redcap environment varioables
 api_url=""
 proj_token=""
 
-;[project_ids]
+;Notification project id
 notifications_pid= ..
+
+;Resident information project id
 resident_info_pid= ..
+
+;Faculty/Evaluator information project id
 faculty_info_pid = ..
 
-;[survey_instruments]
+;In Resident Evaluation project,
+
+;faculty evaluation by resident instrument name
 fac_eval_by_res = ..
+
+;resident evaluation by faculty instrument name
 res_eval_by_fac = ..
 
-;[field_names_in_invite_information]
+;email ids, timestamp and survey links field names from
+;;invite information instrument
 res_email_label= ..
 fac_email_label= ..
 res_eval_link= ..
 fac_eval_link=..
+submit_date = ..
+submit_time =..
 
-;[field_names_of_emails]
+;email field names in resident information
+;and faculty information projects
 res_info_email_field = email_1
 fac_info_email_field = email_2
  
-;[field_names_of_different_resident_institutions_in_resident_info_instrument]
-
+;field names of resident from resident_info instrument that
+;;corresponds to drop down of institutions
 resident_insts[]= resident_institution1
 resident_insts[]= resident_institution2
 resident_insts[]= resident_institution3
@@ -30,7 +43,9 @@ resident_insts[]= ..
 resident_insts[]= ..
 resident_insts[]= ..
 
-;[field_names_of_different_faculty_institution]
+
+;field names of faculty from resident_info instrument that
+;;corresponds to drop down of instituions
 faculty_insts[]= faculty_institution1
 faculty_insts[]= ..
 faculty_insts[]= ..
